Header updated for desktop, need to make responsive

--- a/typedoc_theme/assets/css/_constants.sass
+++ b/typedoc_theme/assets/css/_constants.sass
@@ -1,7 +1,7 @@
 // Fonts
 //
-$FONT_FAMILY: 'Roboto', 'Segoe UI', sans-serif
-$FONT_FAMILY_MONO: 'Ubuntu Mono', monospace // Menlo, Monaco, Consolas, 'Courier New', monospace
+$FONT_FAMILY: 'Theinhardt', sans-serif
+$FONT_FAMILY_MONO: 'Reno Mono', monospace // Menlo, Monaco, Consolas, 'Courier New', monospace
 
 $FONT_SIZE: 16px
 $FONT_SIZE_MONO: 14px
@@ -17,11 +17,11 @@ $FONT_WEIGHT_SUB_BOLD: 500
 
 // Colors
 //
-$COLOR_BACKGROUND: #fdfdfd
+$COLOR_BACKGROUND: #115CF1
 $COLOR_SEARCH_BAR_BACKGROUND: #ffffffaa
 $COLOR_SIGNATURE_BACKGROUND: hsla(172, 50%, 60%, 1)
 $COLOR_COMMENT_BACKGROUND: white
-$COLOR_TEXT: #314159
+$COLOR_TEXT: #fff
 $COLOR_TEXT_ASIDE: #808080
 $COLOR_LINK: hsla(180, 50%, 40%, 1)
 
@@ -43,6 +43,6 @@ $COLOR_TS_ENUM: #e74c3c
 $COLOR_TS_CLASS: #099dcb
 $COLOR_TS_PRIVATE: #808080
 
-$TOOLBAR_COLOR: #33999929
-$TOOLBAR_TEXT_COLOR: #333
+$TOOLBAR_COLOR: #115CF1
+$TOOLBAR_TEXT_COLOR: #fff
 $TOOLBAR_HEIGHT: 40px
