--- a/typedoc_theme/assets/css/elements/_search.sass
+++ b/typedoc_theme/assets/css/elements/_search.sass
@@ -4,6 +4,10 @@
     .title
         position: relative
         z-index: 2
+        font-weight: 600
+        font-size: 1.5em
+        &:hover
+          text-decoration: none
 
     .field
         position: absolute
@@ -29,6 +33,9 @@
             position: absolute
             overflow: hidden
             right: -40px
+            background-color: white
+            border-radius: 20px
+            opacity: 1
 
     .field input,
     .title
