--- a/typedoc_theme/assets/css/layouts/_default.sass
+++ b/typedoc_theme/assets/css/layouts/_default.sass
@@ -90,8 +90,8 @@ html.default
     padding: 70px 0 20px 0
     margin: 0 0 40px 0
     font-weight: $FONT_WEIGHT_LIGHT
-    background: url("../images/page_title_background.svg")
-    box-shadow: 0 0 5px rgba(#000, 0.35)
+    // background: url("../images/page_title_background.svg")
+    // box-shadow: 0 0 5px rgba(#000, 0.35)
 
     h1
         margin: 0
