--- a/typedoc_theme/partials/header.hbs
+++ b/typedoc_theme/partials/header.hbs
@@ -4,6 +4,11 @@
             <div class="table-wrap">
                 <div class="table-cell" id="tsd-search" data-index="{{relativeURL "assets/js/search.js"}}" data-base="{{relativeURL "./"}}">
                     <div class="field">
+                        <ul class="link-container">
+                          <li class="link-item"><a>Why rpc_ts?</a></li>
+                          <li class="link-item"><a>Get Started?</a></li>
+                          <a href="https://github.com/aiden/rpc_ts" target="_blank"><li class="link-item" id="github-link">Github</li></a>
+                        </ul>
                         <label for="tsd-search-field" class="tsd-widget search no-caption">Search</label>
                         <input id="tsd-search-field" type="text" />
                     </div>
@@ -17,33 +22,7 @@
                 </div>
 
                 <div class="table-cell" id="tsd-widgets">
-                    <div id="tsd-filter">
-                        <a href="#" class="tsd-widget options no-caption" data-toggle="options">Options</a>
-                        <div class="tsd-filter-group">
-                            <div class="tsd-select" id="tsd-filter-visibility">
-                                <span class="tsd-select-label">All</span>
-                                <ul class="tsd-select-list">
-                                    <li data-value="public">Public</li>
-                                    <li data-value="protected">Public/Protected</li>
-                                    <li data-value="private" class="selected">All</li>
-                                </ul>
-                            </div>
-
-                            <input type="checkbox" id="tsd-filter-inherited" checked />
-                            <label class="tsd-widget" for="tsd-filter-inherited">Inherited</label>
-
-                            {{#unless settings.excludeExternals}}
-                                <input type="checkbox" id="tsd-filter-externals" checked />
-                                <label class="tsd-widget" for="tsd-filter-externals">Externals</label>
-                            {{/unless}}
-
-                            {{#unless settings.excludeNotExported}}
-                                <input type="checkbox" id="tsd-filter-only-exported" />
-                                <label class="tsd-widget" for="tsd-filter-only-exported">Only exported</label>
-                            {{/unless}}
-                        </div>
-                    </div>
-
+                    <!-- <div id="header-github-button">Github</div> -->
                     <a href="#" class="tsd-widget menu no-caption" data-toggle="menu">Menu</a>
                 </div>
             </div>
