Header Hides on Mobile

--- a/typedoc_theme/assets/css/layouts/_default.sass
+++ b/typedoc_theme/assets/css/layouts/_default.sass
@@ -34,6 +34,12 @@ html.default
             > *:last-child
                 padding-bottom: 20px
 
+        .leave-at-xs-sm
+            display: none
+
+        .link-container
+            width: 100%
+
         .overlay
             content: ''
             display: block
