--- a/typedoc_theme/partials/header.hbs
+++ b/typedoc_theme/partials/header.hbs
@@ -5,11 +5,11 @@
                 <div class="table-cell" id="tsd-search" data-index="{{relativeURL "assets/js/search.js"}}" data-base="{{relativeURL "./"}}">
                     <div class="field">
                         <ul class="link-container">
-                          <li class="link-item"><a>Why rpc_ts?</a></li>
-                          <li class="link-item"><a>Get Started?</a></li>
+                          <li class="link-item leave-at-xs-sm"><a>Why rpc_ts?</a></li>
+                          <li class="link-item leave-at-xs-sm"><a>Get Started?</a></li>
                           <a href="https://github.com/aiden/rpc_ts" target="_blank"><li class="link-item" id="github-link">Github</li></a>
                         </ul>
-                        <label for="tsd-search-field" class="tsd-widget search no-caption">Search</label>
+                        <label for="tsd-search-field" class="tsd-widget search no-caption leave-at-xs-sm">Search</label>
                         <input id="tsd-search-field" type="text" />
                     </div>
 
