Numbering added to the module list. Moves to newline nice even if the text is too long.

--- a/typedoc_theme/assets/css/_constants.sass
+++ b/typedoc_theme/assets/css/_constants.sass
@@ -22,14 +22,14 @@ $COLOR_SEARCH_BAR_BACKGROUND: #ffffffaa
 $COLOR_SIGNATURE_BACKGROUND: hsla(172, 50%, 60%, 1)
 $COLOR_COMMENT_BACKGROUND: white
 $COLOR_TEXT: #fff
-$COLOR_TEXT_ASIDE: #808080
+$COLOR_TEXT_ASIDE: #fff
 $COLOR_LINK: hsla(180, 50%, 40%, 1)
 
 $COLOR_MENU_DIVIDER: #eee
 $COLOR_MENU_DIVIDER_FOCUS: #000
 $COLOR_MENU_LABEL: #808080
 
-$COLOR_PANEL: #fff
+$COLOR_PANEL: #115CF1
 $COLOR_PANEL_DIVIDER: #eee
 
 $COLOR_COMMENT_TAG: #808080
