--- a/typedoc_theme/layouts/default.hbs
+++ b/typedoc_theme/layouts/default.hbs
@@ -22,11 +22,11 @@
         </div>
         <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
             <nav class="tsd-navigation primary">
-                <ul>
+                <ol class="module-list">
                     {{#each navigation.children}}
                         {{> navigation}}
                     {{/each}}
-                </ul>
+                </ol>
             </nav>
 
             <nav class="tsd-navigation secondary menu-sticky">
