--- a/typedoc_theme/partials/header.hbs
+++ b/typedoc_theme/partials/header.hbs
@@ -31,10 +31,10 @@
     <div class="tsd-page-title">
         <div class="container">
             <ul class="tsd-breadcrumb">
-                {{#with model}}{{> breadcrumb}}{{/with}}
+                <!-- {{#with model}}{{> breadcrumb}}{{/with}} -->
             </ul>
             <h1>{{#compact}}
-                {{model.kindString}}&nbsp;
+                <!-- {{model.kindString}}&nbsp; -->
                 {{model.name}}
                 {{#if model.typeParameters}}
                     &lt;
