--- a/typedoc_theme/assets/css/layouts/_default.sass
+++ b/typedoc_theme/assets/css/layouts/_default.sass
@@ -101,7 +101,7 @@ html.default
 
     h1
         margin: 0
-        color: #333
+        color: $COLOR_TEXT
         font-size: 2.5em
         font-weight: $FONT_WEIGHT_LIGHT
 
