search bar input improved, result display needs work.

--- a/typedoc_theme/assets/css/elements/_search.sass
+++ b/typedoc_theme/assets/css/elements/_search.sass
@@ -1,5 +1,6 @@
 #tsd-search
     transition: background-color 0.2s
+    border-radius: 20px
 
     .title
         position: relative
@@ -27,7 +28,8 @@
             outline: 0
             border: 0
             background: transparent
-            color: $COLOR_TEXT
+            color: #000
+            border-radius: 20px
 
         label
             position: absolute
