--- a/typedoc_theme/assets/css/_constants.sass
+++ b/typedoc_theme/assets/css/_constants.sass
@@ -18,7 +18,7 @@ $FONT_WEIGHT_SUB_BOLD: 500
 // Colors
 //
 $COLOR_BACKGROUND: #115CF1
-$COLOR_SEARCH_BAR_BACKGROUND: #ffffffaa
+$COLOR_SEARCH_BAR_BACKGROUND: #ffffff
 $COLOR_SIGNATURE_BACKGROUND: hsla(172, 50%, 60%, 1)
 $COLOR_COMMENT_BACKGROUND: white
 $COLOR_TEXT: #fff
