--- a/typedoc_theme/assets/css/elements/_navigation.sass
+++ b/typedoc_theme/assets/css/elements/_navigation.sass
@@ -13,7 +13,7 @@
         +INDENT($DEPTH, $BASE, $STEP)
 
 .tsd-navigation
-    padding: 0 0 0 40px
+    padding: 0 0 0 0
     font-size: 85%
     font-weight: $FONT_WEIGHT_SUPERLIGHT
 
