Vertical line added.

--- a/typedoc_theme/assets/css/_constants.sass
+++ b/typedoc_theme/assets/css/_constants.sass
@@ -46,3 +46,6 @@ $COLOR_TS_PRIVATE: #808080
 $TOOLBAR_COLOR: #115CF1
 $TOOLBAR_TEXT_COLOR: #fff
 $TOOLBAR_HEIGHT: 40px
+
+// GRID
+$MAX_CONTENT_WIDTH: 1200px
