--- a/typedoc_theme/assets/css/elements/_index.sass
+++ b/typedoc_theme/assets/css/elements/_index.sass
@@ -77,3 +77,13 @@
 
     .tsd-is-private a
         color: $COLOR_TS_PRIVATE
+
+
+#vertical-line
+    border-right: 1px solid #ffffff
+    height: 100vh
+    position: fixed
+    top: 0
+    z-index: 2
+    width: calc(((1200 - 200) * 0.333px))
+    pointer-events: none
