--- a/typedoc_theme/assets/css/elements/_toolbar.sass
+++ b/typedoc_theme/assets/css/elements/_toolbar.sass
@@ -12,7 +12,7 @@
 //
 
 .tsd-page-toolbar
-    position: absolute
+    position: relative
     z-index: 1
     top: 0
     left: 0
@@ -20,6 +20,7 @@
     height: $TOOLBAR_HEIGHT
     color: $TOOLBAR_TEXT_COLOR
     background: $TOOLBAR_COLOR
+    margin-bottom: 80px
 
     a
         color: $TOOLBAR_TEXT_COLOR
