--- a/typedoc_theme/layouts/default.hbs
+++ b/typedoc_theme/layouts/default.hbs
@@ -17,6 +17,8 @@
 
 <div class="container container-main">
     <div class="row">
+        <div id="vertical-line" class="leave-at-xs-sm"></div>
+
         <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
             <nav class="tsd-navigation primary">
                 <ol class="module-list">
@@ -36,6 +38,20 @@
         </div>
 
         <div class="col-8 col-content">
+            <div class="tsd-page-title">
+                  <h1>{{#compact}}
+                      {{model.name}}
+                      {{#if model.typeParameters}}
+                          &lt;
+                          {{#each model.typeParameters}}
+                              {{#if @index}},&nbsp;{{/if}}
+                              {{name}}
+                          {{/each}}
+                          &gt;
+                      {{/if}}
+                  {{/compact}}</h1>
+            </div>
+
             {{{contents}}}
         </div>
 
