Signature box made better

--- a/typedoc_theme/assets/css/elements/_signatures.sass
+++ b/typedoc_theme/assets/css/elements/_signatures.sass
@@ -17,7 +17,8 @@
     font-family: $FONT_FAMILY_MONO
     font-size: $FONT_SIZE_MONO
     border: 0
-    background: hsla(171, 45%, 85%, 1)
+    background: #2066F1
+    border-radius: 20px
 
     &.tsd-kind-icon
         padding-left: 30px
@@ -58,7 +59,6 @@
 .tsd-signatures
     padding: 0
     margin: 0 0 1em 0
-    border: 1px solid $COLOR_PANEL_DIVIDER
 
     .tsd-signature
         margin: 0
