Minor Syntax Update

--- a/typedoc_theme/assets/css/_constants.sass
+++ b/typedoc_theme/assets/css/_constants.sass
@@ -9,7 +9,7 @@ $FONT_SIZE_SMALL: 13.6px
 
 $LINE_HEIGHT: 1.333em
 
-$FONT_WEIGHT_SUPERLIGHT: 200
+$FONT_WEIGHT_SUPERLIGHT: 100
 $FONT_WEIGHT_LIGHT: 300
 $FONT_WEIGHT_NORMAL: 400 // normal
 $FONT_WEIGHT_SUB_BOLD: 500
@@ -22,7 +22,7 @@ $COLOR_SEARCH_BAR_BACKGROUND: #ffffff
 $COLOR_SIGNATURE_BACKGROUND: hsla(172, 50%, 60%, 1)
 $COLOR_COMMENT_BACKGROUND: white
 $COLOR_TEXT: #fff
-$COLOR_TEXT_ASIDE: #fff
+$COLOR_TEXT_ASIDE: #314159
 $COLOR_LINK: hsla(180, 50%, 40%, 1)
 
 $COLOR_MENU_DIVIDER: #eee
