--- a/typedoc_theme/assets/css/elements/_comment.sass
+++ b/typedoc_theme/assets/css/elements/_comment.sass
@@ -31,7 +31,9 @@ dl.tsd-comment-tags
             content: " "
         pre, &:after
             clear: both
-
+            background-color: #F3F3F3
+            border-radius: 20px
+            color: #868B93
     p
         margin: 0
 
