--- a/typedoc_theme/assets/css/elements/_navigation.sass
+++ b/typedoc_theme/assets/css/elements/_navigation.sass
@@ -15,7 +15,7 @@
 .tsd-navigation
     padding: 0 0 0 0
     font-size: 85%
-    font-weight: $FONT_WEIGHT_SUPERLIGHT
+    font-weight: $FONT_WEIGHT_NORMAL
 
     a
         display: block
