Examples made clearer

--- a/typedoc_theme/assets/css/_constants.sass
+++ b/typedoc_theme/assets/css/_constants.sass
@@ -20,10 +20,12 @@ $FONT_WEIGHT_SUB_BOLD: 500
 $COLOR_BACKGROUND: #115CF1
 $COLOR_SEARCH_BAR_BACKGROUND: #ffffff
 $COLOR_SIGNATURE_BACKGROUND: hsla(172, 50%, 60%, 1)
-$COLOR_COMMENT_BACKGROUND: white
+$COLOR_COMMENT_BACKGROUND: #115CF1
 $COLOR_TEXT: #fff
-$COLOR_TEXT_ASIDE: #314159
-$COLOR_LINK: hsla(180, 50%, 40%, 1)
+$COLOR_TEXT_ASIDE: #abccff
+// $COLOR_LINK: hsla(180, 50%, 40%, 1)
+$COLOR_LINK: #abccff
+
 
 $COLOR_MENU_DIVIDER: #eee
 $COLOR_MENU_DIVIDER_FOCUS: #000
@@ -32,16 +34,22 @@ $COLOR_MENU_LABEL: #808080
 $COLOR_PANEL: #115CF1
 $COLOR_PANEL_DIVIDER: #eee
 
-$COLOR_COMMENT_TAG: #808080
+$COLOR_COMMENT_TAG: #fff
 $COLOR_COMMENT_TAG_TEXT: #fff
 
 $COLOR_CODE_BACKGROUND: rgba(#000, 0.04)
 
-$COLOR_TS: #13a5ad
-$COLOR_TS_INTERFACE: #38cc73
-$COLOR_TS_ENUM: #e74c3c
-$COLOR_TS_CLASS: #099dcb
-$COLOR_TS_PRIVATE: #808080
+$COLOR_TS: #fff
+$COLOR_TS_INTERFACE: #fff
+$COLOR_TS_ENUM: #fff
+$COLOR_TS_CLASS: #fff
+$COLOR_TS_PRIVATE: #fff
+
+$COLOR_TS_PRIVATE: #fff
+
+// $COLOR_TS_ENUM: #e74c3c
+// $COLOR_TS_CLASS: #099dcb
+// $COLOR_TS_PRIVATE: #808080
 
 $TOOLBAR_COLOR: #115CF1
 $TOOLBAR_TEXT_COLOR: #fff
