--- a/typedoc_theme/assets/css/elements/_signatures.sass
+++ b/typedoc_theme/assets/css/elements/_signatures.sass
@@ -17,12 +17,12 @@
     font-family: $FONT_FAMILY_MONO
     font-size: $FONT_SIZE_MONO
     border: 0
-    background: #F3F3F3
+    background: #2066F1
     border-radius: 20px
-    color: #2066F1
+    color: #fff
 
     a
-      color: #314159
+      color: #abccff
 
     &.tsd-kind-icon
         padding-left: 30px
