--- a/typedoc_theme/partials/header.hbs
+++ b/typedoc_theme/partials/header.hbs
@@ -6,7 +6,7 @@
                     <div class="field">
                         <ul class="link-container">
                           <li class="link-item leave-at-xs-sm"><a>Why rpc_ts?</a></li>
-                          <li class="link-item leave-at-xs-sm"><a>Get Started?</a></li>
+                          <li class="link-item leave-at-xs-sm"><a>Documentation</a></li>
                           <a href="https://github.com/aiden/rpc_ts" target="_blank"><li class="link-item" id="github-link">Github</li></a>
                         </ul>
                         <label for="tsd-search-field" class="tsd-widget search no-caption leave-at-xs-sm">Search</label>
