--- a/typedoc_theme/assets/css/elements/_comment.sass
+++ b/typedoc_theme/assets/css/elements/_comment.sass
@@ -11,13 +11,16 @@
 //
 dl.tsd-comment-tags
     overflow: hidden
+    background-color: #F3F3F3
+    border-radius: 20px
+    padding: 10px 0px 0px 10px
 
     dt
         float: left
         padding: 1px 5px
         margin: 0 10px 0 0
-        border-radius: 4px
-        border: 1px solid $COLOR_COMMENT_TAG
+        border-radius: 20px
+        // border: 1px solid $COLOR_COMMENT_TAG
         color: $COLOR_COMMENT_TAG
         font-size: 0.8em
         font-weight: $FONT_WEIGHT_NORMAL
@@ -33,7 +36,12 @@ dl.tsd-comment-tags
             clear: both
             background-color: #F3F3F3
             border-radius: 20px
-            color: #868B93
+            color: #314159
+
+        pre
+            .hljs-comment
+                color: #8BBE20
+
     p
         margin: 0
 
