License section made less obtrusive

--- a/typedoc_theme/assets/css/_constants.sass
+++ b/typedoc_theme/assets/css/_constants.sass
@@ -27,12 +27,12 @@ $COLOR_TEXT_ASIDE: #abccff
 $COLOR_LINK: #abccff
 
 
-$COLOR_MENU_DIVIDER: #eee
+$COLOR_MENU_DIVIDER: #fff
 $COLOR_MENU_DIVIDER_FOCUS: #000
 $COLOR_MENU_LABEL: #808080
 
 $COLOR_PANEL: #115CF1
-$COLOR_PANEL_DIVIDER: #eee
+$COLOR_PANEL_DIVIDER: #fff
 
 $COLOR_COMMENT_TAG: #fff
 $COLOR_COMMENT_TAG_TEXT: #fff
