--- a/typedoc_theme/assets/css/elements/_navigation.sass
+++ b/typedoc_theme/assets/css/elements/_navigation.sass
@@ -73,6 +73,7 @@
 
         &.current > a
             font-weight: bold
+            text-decoration: underline
 
         &.label span
             display: block
