--- a/typedoc_theme/assets/css/elements/_panel.sass
+++ b/typedoc_theme/assets/css/elements/_panel.sass
@@ -46,6 +46,21 @@
             &:nth-child(2n)
                 background-color: #f8f8f8
 
+    > .tsd-comment
+      > .tsd-comment-tags
+        font-size: 0.8em
+        background-color: #1662f5
+        color: white
+
+      // [license] tag & [[see]] tag
+      dt
+          color: #115CF1
+          background-color: #fff
+
+      p
+          padding-right: 10px;
+
+
 
 // Holds a series of panels with an optional heading.
 //
