--- a/typedoc_theme/assets/css/elements/_comment.sass
+++ b/typedoc_theme/assets/css/elements/_comment.sass
@@ -11,6 +11,7 @@
 //
 dl.tsd-comment-tags
     overflow: hidden
+    color: #314159
     background-color: #F3F3F3
     border-radius: 20px
     padding: 10px 0px 0px 10px
@@ -19,7 +20,7 @@ dl.tsd-comment-tags
         float: left
         padding: 1px 5px
         margin: 0 10px 0 0
-        border-radius: 20px
+        border-radius: 4px
         // border: 1px solid $COLOR_COMMENT_TAG
         color: $COLOR_COMMENT_TAG
         font-size: 0.8em
@@ -27,7 +28,8 @@ dl.tsd-comment-tags
         background: $COLOR_COMMENT_BACKGROUND
 
     dd
-        margin: 0 0 10px 0
+        margin: 0 0 0 0
+        padding-bottom: 10px
 
         &:before, &:after
             display: table
