--- a/typedoc_theme/assets/css/elements/_member.sass
+++ b/typedoc_theme/assets/css/elements/_member.sass
@@ -2,7 +2,7 @@
     display: inline-block
     padding: 1px 5px
     border-radius: 4px
-    color: $COLOR_COMMENT_TAG_TEXT
+    color: #115CF1
     background-color: $COLOR_COMMENT_TAG
     text-indent: 0
     font-size: $FONT_SIZE_MONO
