click through fixed

--- a/typedoc_theme/assets/css/elements/_toolbar.sass
+++ b/typedoc_theme/assets/css/elements/_toolbar.sass
@@ -21,6 +21,7 @@
     color: $TOOLBAR_TEXT_COLOR
     background: $TOOLBAR_COLOR
     margin-bottom: 80px
+    padding-top: 20px
 
     a
         color: $TOOLBAR_TEXT_COLOR
