--- a/typedoc_theme/assets/css/elements/_footer.sass
+++ b/typedoc_theme/assets/css/elements/_footer.sass
@@ -1,5 +1,5 @@
 footer
-    border-top: 1px solid $COLOR_PANEL_DIVIDER
+    // border-top: 1px solid $COLOR_PANEL_DIVIDER
     background-color: $COLOR_PANEL
 
     &.with-border-bottom
@@ -24,3 +24,28 @@ footer
 
         +size-xs-sm
             width: 50%
+
+    &#aiden-footer
+        background-color: #F3F3F3
+        color: #314159
+        height: 200px
+        z-index: -1
+        position: relative
+
+        .container, .col-4, .col-8
+            height: 200px
+
+        .col-8
+            float: left
+
+        #footer-copy
+            background-color: #F8F8F8
+            padding: 15px 0px 15px 40px
+            border-radius: 30px
+            font-family: $FONT_FAMILY_MONO
+            margin-top: 72px
+            display: flex
+            align-items: center
+
+        #footer-icon
+            margin-right: 30px
