--- a/typedoc_theme/layouts/default.hbs
+++ b/typedoc_theme/layouts/default.hbs
@@ -58,7 +58,7 @@
     </div>
 </div>
 
-{{> footer}}
+{{> aidenFooter}}
 
 <div class="overlay"></div>
 <script src="{{relativeURL "assets/js/main.js"}}"></script>
