--- a/typedoc_theme/partials/footer.hbs
+++ b/typedoc_theme/partials/footer.hbs
@@ -1,5 +1,6 @@
 
-<footer{{#unless settings.hideGenerator}} class="with-border-bottom"{{/unless}}>
+{{#unless settings.hideGenerator}}
+<footer class="with-border-bottom">
     <div class="container">
         <h2>Legend</h2>
         <div class="tsd-legend-group">
@@ -58,6 +59,7 @@
         </div>
     </div>
 </footer>
+{{/unless}}
 
 {{#unless settings.hideGenerator}}
     <div class="container tsd-generator">
