Menu fixed for mobile

--- a/typedoc_theme/assets/css/layouts/_default.sass
+++ b/typedoc_theme/assets/css/layouts/_default.sass
@@ -31,6 +31,7 @@ html.default
             background-color: $COLOR_PANEL
             transform: translate(100%,0)
             border-right: 1px solid #ffffff
+            padding-left: 20px
 
 
             > *:last-child
