Search result colors fixed

--- a/typedoc_theme/assets/css/_constants.sass
+++ b/typedoc_theme/assets/css/_constants.sass
@@ -25,6 +25,7 @@ $COLOR_TEXT: #fff
 $COLOR_TEXT_ASIDE: #abccff
 // $COLOR_LINK: hsla(180, 50%, 40%, 1)
 $COLOR_LINK: #abccff
+$COLOR_BLACK: #212529
 
 
 $COLOR_MENU_DIVIDER: #fff
